project/syntax_tests/tests_input/unit/good/Good50.ty
mutable class Action {

    actions: {
        action: () -> Void = {
            value newValue: Int = 3;
            Actions#doSomething(newValue)
        }
    }
}
