project/syntax_tests/tests_input/unit/bad/Bad08.ty
singleton class Worker { 
    
    actions: {
        doIfBig: (x: Int) -> Int = {
            if (x > 3) {
                dosomething
            } else Pass
        }
    }
}
